--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -569,7 +569,7 @@ Format: `undo` or `u`
 The `add`, `update`, `clear`, and `delete` commands can be undone.
 Commands like `list` or `find` cannot be undone.
 
-Commands caused by automated commands, such as a `NotifCommand` can be undone and redone.
+Commands caused by automated commands, such as an `UpdateCommand` caused by `Notif` can be undone and redone.
 For example, the automatic status change of a `Body` from `ARRIVED` to `CONTACT_POLICE`  is caused by an `UpdateCommand` and can be undone and redone. However, note that this feature does not support
 the `NotifCommand` itself. For example, if a `Body` was added and deleted before the `NotifCommand` associated with it has executed,
 undoing the deletion will not restore the `NotifCommand`.
