--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -182,14 +182,14 @@ Examples:
 
 Let's say that you have completely depleted some items, namely `Cherry` and `Coco Crunch` in the main tracking list, and you wish to view these items
 that have been automatically shifted to the replenish list. You can do so by typing `view|replenish` in the command box
-to change your current list view to that shown in Figure 2 below.
+to change your current list view to that shown in the figure below.
 
 .Items in replenish list viewed
 image::view-replenish.png[width="790"]
 
 Perhaps after viewing all your items in the replenish list, you wish to return to the main tracking list to add some items
 that you have recently purchased. You can easily return to the main list, by typing `view|main` in the command box.
-This is depicted in Figure 3 below.
+This is depicted in the figure below.
 
 .Items in main tracking list viewed
 image::view-main.png[width="790"]
