Update developer guide  (#185)
* Remove all instances of address

* Add new command: Remark

* Update UserGuide.adoc

* Update UserGuide.adoc

* Update Ui.png

* Update UserGuide.adoc

* Update Ui.png

* Revert "Update Ui.png"

This reverts commit 09529ffa6d15f40b21807f2d1af2b6fd64b99378.

* Revert "Update UserGuide.adoc"

This reverts commit 1011cb16e1d28a6e0b104c2ab2558f326e4deca1.

* Revert "Update Ui.png"

This reverts commit 43aa00b780ab5e7ec30d320bddd7fbb157c98808.

* Revert "Update UserGuide.adoc"

This reverts commit c907562aa13235e5c18bbad56c32118429e03c55.

* Revert "Update UserGuide.adoc"

This reverts commit ea7590c2db054fb1359da7ec92c1364efa3b6da6.

* Revert "Merge branch 'tutorial-adding-command'"

This reverts commit 3f671ae4b369ecc1941d61313756e879f0c52515, reversing
changes made to 5e1abfd36d07a4f508e11d4db75ed375d1c7d091.

* Revert "Remove all instances of address"

This reverts commit 5e1abfd36d07a4f508e11d4db75ed375d1c7d091.

* Update UserGuide.adoc

* Update UserGuide.adoc

* Add activity and sequence diagram for Add command

* Change sequence diagram

* Change activity diagram

* Resize activity diagram

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update photos

* Update DeveloperGuide.adoc

Update add command

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

Add stats feature and modify add feature

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update the diagrams

* Update DeveloperGuide.adoc

* Update DeveloperGuide.adoc

* Update general diagrams

* Update DeveloperGuide.adoc

* Edit Storage class diagram

* Update diagrams to follow theme

* Update DeveloperGuide.adoc

Update picture links

* Add newline at EOF

*

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -181,6 +181,8 @@ Step 6. After successfully adding the eatery into `EateryList`, `AddCommand` wil
 
 The following sequence diagram shows how the add eatery feature is executed.
 image:AddSequenceDiagram.png[]
+
+The following sequence diagram shows the reference sequence diagram for creating `Eatery e`.
 image:AddCreateSequenceDiagram.png[]
 
 ==== Design Considerations
@@ -219,8 +221,13 @@ Step 6. If the newly created `Eatery` is not a duplicate of the existing `Eatery
 
 Step 7. After successfully editing the eatery, `EditCommand` will return the `CommandResult` to the `Ui`.
 
-The following sequence diagram shows how the add eatery feature is executed.
+The following sequence diagram shows how the edit eatery feature is executed.
 image:EditSequenceDiagram.png[]
+
+The following sequence diagram shows the reference sequence diagram for creating an `EditEateryDescriptor e`.
+image:EditEateryDescriptorSequenceDiagram.png[]
+
+The reference sequence diagram for creating `Eatery edited` has been omitted as the steps are the same as the reference sequence diagram for `add` command above.
 
 ==== Design Considerations
 ===== Aspect: Replace or add on to eatery's list of tags
